# taka_editor

./: ANCHORED_SUMMARY.md  Cargo.toml  index.html  style.css
src/: file_loader.rs  lib.rs  ui.rs
src/renderer/: camera.rs  gizmo.rs  half_edge.rs  mod.rs  moveable.rs  pass.rs  ray.rs  remesh.rs  wgpu.rs
src/renderer/gpu/: binding_types.rs  buffer.rs  kernel.rs  macros.rs  mod.rs
src/renderer/passes/: grid_pass.rs  image_pass.rs  line_pass.rs  mesh_pass.rs  mod.rs
src/renderer/shaders/: editor.wgsl  grid.wgsl  image.wgsl  raycast.wgsl  triangle.wgsl
