[package]
name = "taka_editor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "29", features = ["wgsl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "29", default-features = false, features = [
    "webgpu",
    "webgl",
    "wgsl",
    "fragile-send-sync-non-atomic-wasm",
] }

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "console",
    "EventTarget",
] }
bytemuck = { version = "1", features = ["derive"] }
