[package]
name = "taka_editor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "29", features = ["wgsl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "29", default-features = false, features = [
    "webgpu",
    "webgl",
    "wgsl",
    "fragile-send-sync-non-atomic-wasm",
] }

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
bytemuck_derive = "1.4.1"
glam = "0.29"
gltf = "1.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "HtmlElement",
    "Window",
    "Document",
    "console",
    "EventTarget",
    "Performance",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
] }
